Fix T56220: Adding Grease Object crashes if link Material is set to Object