source/blender/editors/gpencil/gpencil_add_monkey.c
@@ -55,11 +55,10 @@ typedef struct ColorTemplate {
 /* Add color an ensure duplications (matched by name) */
 static int gpencil_monkey_color(Main *bmain, Object *ob, const ColorTemplate *pct)
 {
-	Material *ma = NULL;
-	Material ***matar = give_matarar(ob);
 	short *totcol = give_totcolp(ob);
+	Material *ma = NULL;
 	for (short i = 0; i < *totcol; i++) {
-		ma = (*matar)[i];
+		ma = give_current_material(ob, i + 1);
 		if (STREQ(ma->id.name, pct->name)) {
 			return i;
 		}
@@ -73,7 +72,7 @@ static int gpencil_monkey_color(Main *bmain, Object *ob, const ColorTemplate *pc
 	copy_v4_v4(ma->gp_style->stroke_rgba, pct->line);
 	copy_v4_v4(ma->gp_style->fill_rgba, pct->fill);
 
-	return BKE_object_material_slot_find_index(ob, ma) - 1;
+	return BKE_gpencil_get_material_index(ob, ma) - 1;
 }
 
 /* ***************************************************************** */
