source/blender/editors/gpencil/gpencil_brush.c
@@ -1053,8 +1053,8 @@ static void gp_brush_clone_add(bContext *C, tGP_BrushEditData *gso)
 
 			/* Fix color references */
 			Material *ma = BLI_ghash_lookup(data->new_colors, &new_stroke->mat_nr);
-			if ((ma) && (BKE_object_material_slot_find_index(ob, ma) > 0)) {
-				gps->mat_nr = BKE_object_material_slot_find_index(ob, ma) - 1;
+			if ((ma) && (BKE_gpencil_get_material_index(ob, ma) > 0)) {
+				gps->mat_nr = BKE_gpencil_get_material_index(ob, ma) - 1;
 				CLAMP_MIN(gps->mat_nr, 0);
 			}
 			else {
