source/blender/gpencil_modifiers/intern/MOD_gpencil_util.c
@@ -169,7 +169,7 @@ void gpencil_apply_modifier_material(
 			DEG_id_tag_update(&newmat->id, DEG_TAG_COPY_ON_WRITE);
 		}
 		/* reasign color index */
-		int idx = BKE_object_material_slot_find_index(ob, newmat);
+		int idx = BKE_gpencil_get_material_index(ob, newmat);
 		gps->mat_nr = idx - 1;
 	}
 	else {
